# Kitch

./: .gitignore  README.md  addressen_random.csv  app.py  city_borders.html  folium_map.html  heatmap.html  insert_data.sql  kazernes.csv  kazernes.py  main.py  main2.py  main3.py  map_with_multiple_layers.html  map_with_routes.html  nearby_boundaries.geojson  pyproject.toml  setup.py  setup_tables.sql  sidebar_choices_enum.py  test.py  test.txt
UML/: Architectuur.md  Kitch.md  Use-Cases.md  structuur.md  structuur_draft.md  usecase_general.md  usecase_general_flow.md  usecase_operations.md  usecase_planner.md  usecase_planner_1.md
Web_Layer/: config.yml  geo_util.py  map_api.py  map_fast_api.py  point.py  starter_web.py  starter_web_fat_api.py  test_coord_city.json
addresses/: addresses.csv  addresses.py
database_layer/: AsyncRepository.py  config.yml  configuration_manager.py  csv_to_address.py  db_service.py  db_starter.py  facade.py  lat_lon_replacer.py  mapper.py  media_document_facade.py  singleton.py  structure.sql
docs/: README.md  clean.bat  view_html.bat
domain/: DatabaseModelClasses.py
folium_discover/: city_borders.html  heatmap.html  kazernes.html  main5_route.py  main5_routes.html  main5_routes.py  main6_filters.html  main6_filters.py  main7_google_route.py  main7_multifilter.html  map_with_multiple_layers.html  map_with_routes.html
gui_flet/: Person_input.py  assignment_view.py  keys.py  main_flet.py
resources/: test_coord_layer.json
shiney_tests/: shiney_app.py
shiny_discover/: app.py
shiny_proof/: app.py
sql/: addresses.py  draft.txt  generator.py  guide.md  insert_data.sql  insert_into.py  insert_into.sql  insert_into_address.sql  insert_into_company.sql  insert_into_employee.sql  insert_into_person.sql  insert_into_worker.sql  person.csv  setup_tables.sql
src/: __init__.py
static/: folium_map.html
templates/: folium_map.html  map.html  map_mul.html
test_cases/: city_borders.html  ghent_boundary.geojson  heatmap.html  kazernes.html  kazernes.py  main.py  main2.py  main3.py  main4.py  main_flask.py  map_with_multiple_layers.html
test_folium/: city_borders.html  main.py
tests/: ConfigurationManagerTests.py  (+1 more)
(+75 files in other folders)
