[project]
name = "proof-of-concept-folium"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "flask[async]>=3.1.0",
    "folium>=0.19.5",
    "pandas>=2.2.3",
    "pydyf>=0.11.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "flet[all]>=0.27.6",
]
