[project]
name = "proof-of-concept-folium"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "asyncpg>=0.30.0",
    "box>=0.1.5",
    "dbservice>=2.1.3",
    "debugpy>=1.8.14",
    "fastapi>=0.115.12",
    "flask[async]>=3.1.0",
    "folium>=0.19.5",
    "ipyleaflet>=0.19.2",
    "ipywidgets>=8.1.6",
    "pandas>=2.2.3",
    "pydyf>=0.11.0",
    "pytest-mock>=3.14.0",
    "pytest[all]>=8.3.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "shiny[all]>=1.4.0",
    "shinywidgets>=0.5.2",
    "sqlalchemy>=2.0.40",
    "uv>=0.6.17",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "flet[all]>=0.27.6",
]
